task5/tests/group/output/test15.out
lli: <stdin>:33:11: error: '%t1' defined with type 'i8' but expected 'i32'
store i32 %t1, i32* %b
          ^
